# QtQuick-Kotlin-Android-App

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/breweryfinder/: FirstFragment.kt  MainActivity.kt  Request.kt  SecondFragment.kt
app/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_first.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
breweryFinderQtQuick/: CMakeLists.txt  Main.qml
brewery_finder_qtquick/: CMakeLists.txt  Main.qml  main.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
